--- a/gluten-free-multipurpose-mix.html
+++ b/gluten-free-multipurpose-mix.html
@@ -73,9 +73,9 @@
             <a href="javascript:void(0)" id="fadeButton" class="mobhamburger"></a>
         </div>
     </nav>
-    <div class="hmefstcontsec mobinnerfstcontsec">
+    <div class="hmefstcontsec mobinnerfstcontsec mobilecolor">
         <div class="hmefstdatasec">
-            <div class="sidebtmtxt">Made in a dedicated gluten free manufacturing unit to ensure purity and safety.</div>
+            <!-- <div class="sidebtmtxt">Made in a dedicated gluten free manufacturing unit to ensure purity and safety.</div> -->
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-6 glutenfreepancakesec">
@@ -89,10 +89,15 @@
                 </div>
             </div>
         </div>
-        <video autoplay muted loop playsinline preload="auto">
+        <video class="mobilehide" autoplay muted loop playsinline preload="auto">
             <source src="video/multi-mix-hero.mp4" type="video/mp4" />
         </video>
     </div>
+ <video class="mobileshow" autoplay muted loop playsinline preload="auto">
+            <source src="video/multi-mix-hero.mp4" type="video/mp4" />
+        </video>
+
+
     <div class="glutchapathimixfstcontsec">
         <div class="container">
             <h2>No Math. No guesswork. Just Reliteaur. </h2>
@@ -172,7 +177,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon01.svg">
+                            <!-- <img src="images/icon01.svg"> -->
                             <p><strong>Energy (kcal)</strong></p>
                         </div>
                     </div>
@@ -183,7 +188,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon02.svg">
+                            <!-- <img src="images/icon02.svg"> -->
                             <p><strong>Protein (g)</strong></p>
                         </div>
                     </div>
@@ -194,7 +199,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon03.svg">
+                            <!-- <img src="images/icon03.svg"> -->
                             <p><strong>Carbohydrate (g)</strong></p>
                         </div>
                     </div>
@@ -205,7 +210,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon04.svg">
+                            <!-- <img src="images/icon04.svg"> -->
                             <p><strong>Total sugars (g)</strong></p>
                         </div>
                     </div>
@@ -216,7 +221,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon05.svg">
+                            <!-- <img src="images/icon05.svg"> -->
                             <p><strong>Added sugars (g)</strong></p>
                         </div>
                     </div>
@@ -227,7 +232,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon06.svg">
+                            <!-- <img src="images/icon06.svg"> -->
                             <p><strong>Total Fat (g)</strong></p>
                         </div>
                     </div>
@@ -238,7 +243,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon01.svg">
+                            <!-- <img src="images/icon01.svg"> -->
                             <p><strong>Saturated fat (g)</strong></p>
                         </div>
                     </div>
@@ -249,7 +254,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon02.svg">
+                            <!-- <img src="images/icon02.svg"> -->
                             <p><strong>Trans fat (g) </strong></p>
                         </div>
                     </div>
@@ -260,7 +265,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon03.svg">
+                            <!-- <img src="images/icon03.svg"> -->
                             <p><strong>Cholesterol (mg) </strong></p>
                         </div>
                     </div>
@@ -271,7 +276,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon04.svg">
+                            <!-- <img src="images/icon04.svg"> -->
                             <p><strong>Sodium (mg) </strong></p>
                         </div>
                     </div>
@@ -282,7 +287,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon05.svg">
+                            <!-- <img src="images/icon05.svg"> -->
                             <p><strong>Dietary Fibre (g) </strong></p>
                         </div>
                     </div>
@@ -293,7 +298,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon06.svg">
+                            <!-- <img src="images/icon06.svg"> -->
                             <p><strong>Iron (mg) </strong></p>
                         </div>
                     </div>
@@ -304,7 +309,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon06.svg">
+                            <!-- <img src="images/icon06.svg"> -->
                             <p><strong>Calcium (mg) </strong></p>
                         </div>
                     </div>
@@ -347,10 +352,12 @@
                 </div>
             </div>
         </div>
-        <video autoplay muted loop playsinline preload="auto">
+        <video  autoplay muted loop playsinline preload="auto">
             <source src="video/multi-points.mp4" type="video/mp4" />
         </video>
     </div>
+
+    
     <div class="glutchapathimixfrthcontsec">
         <div class="container">
             <div class="row">
