--- a/gluten-free-pancake-mix.html
+++ b/gluten-free-pancake-mix.html
@@ -68,9 +68,9 @@
             <a href="javascript:void(0)" id="fadeButton" class="mobhamburger"></a>
         </div>
     </nav>
-    <div class="hmefstcontsec mobinnerfstcontsec mobinnerpancakefstsec">
+    <div class="hmefstcontsec mobinnerfstcontsec mobinnerpancakefstsec mobilecolor3">
         <div class="hmefstdatasec">
-            <div class="sidebtmtxt">Made in a dedicated gluten free manufacturing unit to ensure purity and safety.</div>
+            <!-- <div class="sidebtmtxt">Made in a dedicated gluten free manufacturing unit to ensure purity and safety.</div> -->
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-6 glutenfreepancakesec">
@@ -83,10 +83,14 @@
                 </div>
             </div>
         </div>
-        <video autoplay muted loop playsinline preload="auto">
+        <video class="mobilehide"  autoplay muted loop playsinline preload="auto">
             <source src="video/pancake-mix-hero.mp4" type="video/mp4" />
         </video>
     </div>
+
+     <video class="mobileshow" autoplay muted loop playsinline preload="auto">
+            <source src="video/pancake-mix-hero.mp4" type="video/mp4" />
+        </video>
     <div class="glutchapathimixfstcontsec">
         <div class="container">
             <h2>Just a few minutes to pancake perfection. Perfection. Every time.</h2>
@@ -168,7 +172,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon01.svg">
+                            <!-- <img src="images/icon01.svg"> -->
                             <p><strong>Energy (kcal)</strong></p>
                         </div>
                     </div>
@@ -179,7 +183,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon02.svg">
+                            <!-- <img src="images/icon02.svg"> -->
                             <p><strong>Protein (g)</strong></p>
                         </div>
                     </div>
@@ -190,7 +194,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon03.svg">
+                            <!-- <img src="images/icon03.svg"> -->
                             <p><strong>Carbohydrate (g)</strong></p>
                         </div>
                     </div>
@@ -201,7 +205,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon04.svg">
+                            <!-- <img src="images/icon04.svg"> -->
                             <p><strong>Total sugars (g)</strong></p>
                         </div>
                     </div>
@@ -212,7 +216,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon05.svg">
+                            <!-- <img src="images/icon05.svg"> -->
                             <p><strong>Added sugars (g)</strong></p>
                         </div>
                     </div>
@@ -223,7 +227,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon06.svg">
+                            <!-- <img src="images/icon06.svg"> -->
                             <p><strong>Total Fat (g)</strong></p>
                         </div>
                     </div>
@@ -234,7 +238,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon01.svg">
+                            <!-- <img src="images/icon01.svg"> -->
                             <p><strong>Saturated fat (g) </strong></p>
                         </div>
                     </div>
@@ -245,7 +249,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon02.svg">
+                            <!-- <img src="images/icon02.svg"> -->
                             <p><strong>Trans fat (g) </strong></p>
                         </div>
                     </div>
@@ -256,7 +260,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon03.svg">
+                            <!-- <img src="images/icon03.svg"> -->
                             <p><strong>Cholesterol (mg)</strong></p>
                         </div>
                     </div>
@@ -267,7 +271,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon04.svg">
+                            <!-- <img src="images/icon04.svg"> -->
                             <p><strong>Sodium (mg)</strong></p>
                         </div>
                     </div>
@@ -278,7 +282,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon05.svg">
+                            <!-- <img src="images/icon05.svg"> -->
                             <p><strong>Dietary Fibre (g) </strong></p>
                         </div>
                     </div>
@@ -289,7 +293,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon06.svg">
+                            <!-- <img src="images/icon06.svg"> -->
                             <p><strong>Iron (mg) </strong></p>
                         </div>
                     </div>
@@ -300,7 +304,7 @@
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
-                            <img src="images/icon06.svg">
+                            <!-- <img src="images/icon06.svg"> -->
                             <p><strong>Calcium (mg) </strong></p>
                         </div>
                     </div>
@@ -341,10 +345,12 @@
                 </div>
             </div>
         </div>
-        <video autoplay muted loop playsinline preload="auto">
+        <video  autoplay muted loop playsinline preload="auto">
             <source src="video/pancake-points.mp4" type="video/mp4" />
         </video>
     </div>
+
+      
     <div class="glutchapathimixfrthcontsec skybgcolor">
         <div class="container">
             <div class="row">
