--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <li><a href="index.html">Home</a></li>
                 <li><a href="#">Our Products</a>
                     <ul>
-                        <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
-                        <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
-                        <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
+                         <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
+                            <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
+                            <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
                     </ul>
                 </li>
             <li><a href="recipe.html">Gluten Free Recipes</a></li>
@@ -93,9 +93,9 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Our Products</a>
                         <ul>
-                            <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
                             <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
-                            <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
+                            <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
+                             <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="recipe.html">Gluten Free Recipes</a></li>
@@ -121,9 +121,12 @@
                     <div class="col-xl-4 col-lg-4 col-md-4">
                         <div class="hmefstdatarytpart">
                             <div class="heartnarrowdiv">
-                                <div class="test">
-                                    <h3>Where Taste Takes the Lead.</h3>
-                                    <p>Made in a dedicated gluten free manufacturing unit to ensure purity and safety.</p>
+                                <div class="test-custom">
+                                    <h3 class="expandable-heading" style="cursor: pointer;">Where Taste Takes the Lead.</h3>
+                                    <p class="expandable-content" style="display: none;">Made in a dedicated gluten free manufacturing unit to ensure purity and safety.</p>
+                                    <div class="custom-arrow" style="text-align: center; margin-top: 10px;">
+                                        <img class="arrow-icon" src="images/arrow.svg" style="cursor: pointer;" alt="Expand">
+                                    </div>
                                 </div>
                             </div>
                             <div class="funfact">
