--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
             <li><a href="index.html">Home</a></li>
                 <li><a href="#">Our Products</a>
                     <ul>
+                         <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
                          <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
-                            <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
+                           
                             <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
                     </ul>
                 </li>
             <li><a href="recipe.html">Gluten Free Recipes</a></li>
             <li><a href="blog.html">Blogs</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#footer">Contact Us</a></li>
         </ul>
     </div>
     <nav class="navbar navbar-expand-lg headersec">
@@ -93,8 +94,9 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Our Products</a>
                         <ul>
+                              <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
                             <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
-                            <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
+                          
                              <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
                         </ul>
                     </li>
@@ -106,7 +108,9 @@
             <a href="javascript:void(0)" id="fadeButton" class="mobhamburger"></a>
         </div>
     </nav>
-    <div class="hmefstcontsec">
+
+    <!--desktop-->
+    <div class="hmefstcontsec mobilehidehomepage">
         <div class="bluetickicon"><img src="images/bluetick.png"></div>
         <div class="hmefstdatasec">
             <div class="container">
@@ -142,6 +146,52 @@
             <source src="video/hmevideo.mp4" type="video/mp4" />
         </video>
     </div>
+
+
+    <!--mobile-->
+
+  <div class="hmefstcontsec mobileshowhomepage  ">
+        <div class="bluetickicon"><img src="images/bluetick.png"></div>
+        <div class="hmefstdatasec">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-8 col-lg-8 col-md-8">
+                        <div class="hmefstdatalftpart">
+                            <h1>The Great <br> Gluten Free <br>Awakening</h1>
+                            <div><a href="#" class="button">Join the revolution</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4">
+                        <div class="hmefstdatarytpart">
+                            <div class="heartnarrowdiv">
+                                <!-- <div class="test-custom">
+                                    <h3 class="expandable-heading" style="cursor: pointer;">Where Taste <br/>Takes the Lead.</h3>
+                                    <p class="expandable-content" style="display: none;">Made in a dedicated gluten free manufacturing unit to ensure purity and safety.</p>
+                                    <div class="custom-arrow" style="text-align: center; margin-top: 10px;">
+                                        <img class="arrow-icon" src="images/arrow.svg" style="cursor: pointer;" alt="Expand">
+                                    </div>
+                                </div> -->
+                            </div>
+                            <div class="funfact">
+                                <div class="whtefunfacttoparrow"><img src="images/whtefunfacttoparrow.png"></div>
+                                <a class="modalbutton" type="button" data-bs-toggle="modal" data-bs-target="#firstModal"><img src="images/Funfact.png"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <video autoplay muted loop playsinline preload="auto" poster="images/hmevideopposter.jpg">
+            <source src="video/hmevideo.mp4" type="video/mp4" />
+        </video>
+    </div>
+
+<!-- mobile end -->
+
+
+
+
     <div class="hmesndcontsec">
         <div class="container">
             <div class="desktopview">
@@ -409,8 +459,8 @@
                                 <div class="ftrfstcolsec">
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="#">Gluten Free Recipes</a></li>
-                                        <li><a href="#">Blogs</a></li>
+                                        <li><a href="gluten-free-recipes.html">Gluten Free Recipes</a></li>
+                                        <li><a href="blog.html">Blogs</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -418,9 +468,9 @@
                                 <div class="ftrlinksec">
                                     <h2>Products</h2>
                                     <ul>
-                                        <li><a href="#">Multipurpose Mix</a></li>
-                                        <li><a href="#">Chapathi Mix</a></li>
-                                        <li><a href="#">Pancake Mix</a></li>
+                                       <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
+                                <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
+                                <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -474,16 +524,16 @@
                         <div class="ftrfstcolsec">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="#">Gluten Free Recipes</a></li>
-                                <li><a href="#">Blogs</a></li>
+                                <li><a href="recipe.html">Gluten Free Recipes</a></li>
+                                <li><a href="blog.html">Blogs</a></li>
                             </ul>
                         </div>
                         <div class="ftrlinksec">
                             <h2>Products</h2>
                             <ul>
-                                <li><a href="#">Multipurpose Mix</a></li>
-                                <li><a href="#">Chapathi Mix</a></li>
-                                <li><a href="#">Pancake Mix</a></li>
+                                <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
+                                <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
+                                <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
                             </ul>
                         </div>
                     </div>
