--- a/gluten-free-chapathi-mix.html
+++ b/gluten-free-chapathi-mix.html
@@ -40,14 +40,15 @@
             <li><a href="index.html">Home</a></li>
                 <li><a href="#">Our Products</a>
                     <ul>
+                         <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
                          <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
-                            <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
-                             <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
+                           
+                            <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
                     </ul>
                 </li>
             <li><a href="recipe.html">Gluten Free Recipes</a></li>
             <li><a href="blog.html">Blogs</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#footer">Contact Us</a></li>
         </ul>
     </div>
     <nav class="navbar navbar-expand-lg headersec">
@@ -59,9 +60,10 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Our Products</a>
                         <ul>
-                             <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
-                            <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
-                            <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
+                              <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
+                            <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
+                          
+                             <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="recipe.html">Gluten Free Recipes</a></li>
@@ -400,7 +402,7 @@
             </div>
         </div>
     </div>
-    <footer class="footersec" id="footer">
+  <footer class="footersec" id="footer">
         <div class="container">
             <div class="desktopview">
                 <div class="row">
@@ -411,8 +413,8 @@
                                 <div class="ftrfstcolsec">
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="#">Gluten Free Recipes</a></li>
-                                        <li><a href="#">Blogs</a></li>
+                                        <li><a href="gluten-free-recipes.html">Gluten Free Recipes</a></li>
+                                        <li><a href="blog.html">Blogs</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -420,9 +422,9 @@
                                 <div class="ftrlinksec">
                                     <h2>Products</h2>
                                     <ul>
-                                        <li><a href="#">Multipurpose Mix</a></li>
-                                        <li><a href="#">Chapathi Mix</a></li>
-                                        <li><a href="#">Pancake Mix</a></li>
+                                       <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
+                                <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
+                                <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -460,7 +462,7 @@
                         <div class="row">
                             <div class="col-xl-12 col-lg-12 col-12">
                                 <div class="btmftr">
-                                    <p>© 2025 reliteaur foods private limited all rights reserved.</p>
+                                    <p>© 2025 Reliteaur foods private limited all rights reserved.</p>
                                 </div>
                             </div>
                         </div>
@@ -476,16 +478,16 @@
                         <div class="ftrfstcolsec">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="#">Gluten Free Recipes</a></li>
-                                <li><a href="#">Blogs</a></li>
+                                <li><a href="recipe.html">Gluten Free Recipes</a></li>
+                                <li><a href="blog.html">Blogs</a></li>
                             </ul>
                         </div>
                         <div class="ftrlinksec">
                             <h2>Products</h2>
                             <ul>
-                                <li><a href="#">Multipurpose Mix</a></li>
-                                <li><a href="#">Chapathi Mix</a></li>
-                                <li><a href="#">Pancake Mix</a></li>
+                                <li><a href="gluten-free-chapathi-mix.html">Gluten Free Chapathi Mix</a></li>
+                                <li><a href="gluten-free-multipurpose-mix.html">Gluten Free Multipurpose Mix</a></li>
+                                <li><a href="gluten-free-pancake-mix.html">Gluten Free Pancake Mix</a></li>
                             </ul>
                         </div>
                     </div>
@@ -497,7 +499,7 @@
                                 <ul>
                                     <li>Phone: <a href="#">1800 425 4305</a></li>
                                     <li>GSTIN: <a href="#">32AALCR7773F1Z3</a></li>
-                                    <li>Email: <a href="#">customercare@reliteaur.com</a></li>
+                                    <li>Email: <a class="" href="#">customercare@reliteaur.com</a></li>
                                     <li><a href="#">37/40 A, Sidco Industrial Estate, Peringandoor.P.O, Athani, Peringandoor, Thrissur, Kerala, 680581</a></li>
                                 </ul> 
                         </div>
