--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                                     </div>
                                 </div>
                             </div>
+                           <div class="bluetickicon2"> <img src="images/bluetick.png"> </div>
                             <div class="funfact">
                                 <div class="whtefunfacttoparrow"><img src="images/whtefunfacttoparrow.png"></div>
                                 <a class="modalbutton" type="button" data-bs-toggle="modal" data-bs-target="#firstModal"><img src="images/Funfact.png"></a>
