--- a/gluten-free-pancake-mix.html
+++ b/gluten-free-pancake-mix.html
@@ -95,7 +95,7 @@
         </video>
     <div class="glutchapathimixfstcontsec">
         <div class="container">
-            <h2>Just a few minutes to pancake perfection. Perfection. Every time.</h2>
+            <h2>Pancake perfection in minutes, every time!</h2>
             <div class="desktopview">
                 <div class="glutmixfstcontgridsec">
                     <div class="sglegridpart">
@@ -110,8 +110,8 @@
                     </div>
                     <div class="sglegridpart">
                         <div class="gridthumbsec"><img src="images/thumb07.jpg"></div>
-                        <h3>Step 3: Pour, cook and</h3>
-                        <p> watch perfect golden pancakes rise up every time. No special skills needed.</p>
+                        <h3>Step 3: Pour, cook and watch</h3>
+                        <p>Let perfect golden pancakes rise up every time. No special skills needed.</p>
                     </div>
                     <div class="sglegridpart">
                         <div class="gridthumbsec"><img src="images/thumb08.jpg"></div>
@@ -140,8 +140,8 @@
                     <div class="item">
                         <div class="sglegridpart">
                             <div class="gridthumbsec"><img src="images/thumb07.jpg"></div>
-                            <h3>Step 3: Pour and cook</h3>
-                            <p>(Watch the magic happen) Perfect golden pancakes every time, no special skills needed.</p>
+                            <h3>Step 3: Pour, cook and watch</h3>
+                            <p>Let perfect golden pancakes rise up every time. No special skills needed.</p>
                         </div>
                     </div>
                     <div class="item">
