--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <div class="row">
                 <div class="col-xl-7 col-lg-7 col-md-7">
                     <h2>The Origin Story: <br> A Kitchen Revolution</h2>
-                    <p>When our founder Raguram Raghulal embraced a gluten free lifestyle,<br> he didn't settle - he innovated. Like every gluten free food seeker, he found himself asking the same questions: "Will I have to compromise on taste? <br> Is it right for my palate? Will I miss out on delicious food?"</p>
+                    <p>When our founder Raguram Raghulal embraced a gluten free lifestyle,<br> he didn't settle — he innovated. Like every gluten free food seeker, he found himself asking the same questions: "Will I have to compromise on taste? <br> Is it right for my palate? Will I miss out on delicious food?"</p>
                     <p>He turned this concern and empathy into a tenacious drive towards making gluten free cuisines desirable as any other loved tasty fare.</p>
                     <p>Armed with decades of baking wizardry and an obsession with perfection, <br> we set out to prove that gluten free ingredients can indeed help you whip up the tastiest dishes. No love lost: only your tastebuds loving every bite.</p>
                     <p>Today, we're rewriting the rules of what gluten free can be. <br> One delectable bite at a time.</p>
@@ -301,7 +301,7 @@
     </div>
     <div class="hmefrthcontsec">
         <div class="container">
-            <h2>The growing gluten free army - welcome to the taste revolution</h2>
+            <h2>The growing gluten free army — welcome to the taste revolution</h2>
             <h3>Who's Joining Our Growing Community?</h3>
             <div class="owl-carousel owl-theme community-carousel">
                 <div class="item">
@@ -364,7 +364,7 @@
     </div>
     <div class="hmefifthcontsec">
         <div class="container">
-            <h2>Stay in to know</h2>
+            <h2 style="text-transform: uppercase;">Stay in the know</h2>
             <div class="desktopview">
                 <div class="fifthsecboxpart">
                     <div class="sglefifthsecboxsec"><img src="images/1.png"></div>
@@ -400,10 +400,10 @@
                         <li>Annual Facility Audits: No shortcuts, no compromises</li>
                         <li>≤20ppm Gluten Guarantee: Scientifically validated reliability  </li>
                         <li>23,000+ Licensed Gluten Free Products: Worldwide trust network</li>
-                        <li>The Crossed Grain Symbols: Recognized globally</li>
+                        <li>The Crossed Grain Symbols: Recognised globally</li>
                     </ul>
                     <p>In India, we're practically the final word in gluten free. </p>
-                     <p>Source: <a href="#">www.aoecs.org</a></p>
+                     <p>Source: <a href="https://aoecs.org">www.aoecs.org</a></p>
                 </div>
                 <div class="col-xl-5 col-lg-5 col-md-5">
                     <div class="yellowfunfactsec">
@@ -460,7 +460,7 @@
                                 <div class="ftrfstcolsec">
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="gluten-free-recipes.html">Gluten Free Recipes</a></li>
+                                        <li><a href="recipe.html">Gluten Free Recipes</a></li>
                                         <li><a href="blog.html">Blogs</a></li>
                                     </ul>
                                 </div>
