--- a/gluten-free-chapathi-mix.html
+++ b/gluten-free-chapathi-mix.html
@@ -80,7 +80,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-6">
-                        <h1>Gluten free <span>chapathi mix:</span> the complete story</h1>
+                        <h1>Gluten free <span>chapathi mix:</span>the complete story</h1>
                         <h2>"The Flatbread Whisperer That Changed Everything"</h2>
                         <p> Remember making your first fluffy chapathis or puffy pooris? That soft, pliable texture of the dough that stretches just right.  We've captured that exact feeling and made it <strong>gluten free.</strong></p>
                     </div>
@@ -103,7 +103,7 @@
 
     <div class="glutchapathimixfstcontsec">
         <div class="container">
-            <h2>What Makes Our Gluten Free Chapathi Mix Special</h2>
+            <h2>What Makes Our Gluten Free Chapathi Mix Special?</h2>
             <div class="desktopview">
                 <div class="glutmixfstcontgridsec">
                     <div class="sglegridpart">
@@ -125,7 +125,7 @@
                         <div class="gridthumbsec"><img src="images/thumb04.jpg"></div>
                         <h3>The International Test:</h3>
                         <p>AOECS certified catering to 40+ global celiac societies.</p>
-                        <p>Source: <a href="#">www.aoecs.org</a></p>
+                        <p>Source: <a href="https://aoecs.org">www.aoecs.org</a></p>
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                             <div class="gridthumbsec"><img src="images/thumb04.jpg"></div>
                             <h3>The International Test:</h3>
                             <p>AOECS certified by 40+ global celiac societies.</p>
-                             <p><a href="#">Source:  www.aoecs.org</a></p>
+                             <p><a href="https://aoecs.org">Source:  www.aoecs.org</a></p>
                         </div>
                     </div>
                 </div>
@@ -332,10 +332,10 @@
             <div class="btmtablecontpart">
                 <p><strong>Ingredients:</strong></p>
                 <p> Grain flour (Rice & Amaranth), Corn Starch, Ragi (5%),</p>
-                <p>Thickener (INS 412), Pea protein concentrate, Sugar and Iodized salt.</p>
+                <p>Thickener (INS 412), Pea protein concentrate, Sugar and Iodised salt.</p>
                 <p>&nbsp;</p>
                 <p><strong>Package Details:</strong></p>
-                <p><strong>Size:</strong> 1kg ( About 20 servings of joy) | <strong>Storage:</strong> (Like your kitchen cabinet)</p>
+                <p><strong>Size:</strong> 1kg ( About 20 servings of joy) | <strong>Storage:</strong> Cool, dry place. (Like your kitchen cabinet)</p>
             </div>
         </div>
     </div>
