--- a/gluten-free-multipurpose-mix.html
+++ b/gluten-free-multipurpose-mix.html
@@ -349,7 +349,7 @@
                         <p><strong>Artisan Bread:</strong> Crusty outside, pillowy inside.</p>
                         <p><strong>Pizza Dough:</strong> Stretchy, chewy, generous.</p>
                         <p><strong>Crispy Coatings:</strong> For anything that needs a golden hug.</p>
-                        <p><strong>Thickening Agent:</strong> Gravies, sauces, soups - thickened to perfection.</p>
+                        <p><strong>Thickening Agent:</strong> Gravies, sauces, soups — thickened to perfection.</p>
                     </div>
                 </div>
             </div>
@@ -381,7 +381,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-6">
                             <ul>
                                 <li><strong>Rice Flour</strong></li>
-                                <li><strong>Iodized salt</strong></li>
+                                <li><strong>Iodised salt</strong></li>
                             </ul>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-6">
